# backends

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  TODO.md
.github/actions/engine-meta/: action.yml
.github/actions/package/: action.yml
.github/actions/publish-release/: action.yml
.github/actions/setup-toolchain/: action.yml
.github/actions/sign-macos/: action.yml
.github/actions/smoke/: action.yml
.github/actions/stage-build/: action.yml
.github/workflows/: _build-backend.yml  executorch.yml  libtorch.yml  litert.yml  onnxruntime.yml  sign-probe.yml  tflite.yml
cmake/: ExternalEngine.cmake
docs/: RELEASE.md
engines/executorch/: README.md  build-executorch.sh  ios.sh  stage.sh
engines/executorch/test/: CMakeLists.txt  add.pte  export_add.py  smoke.cpp
engines/libtorch/: README.md  build-libtorch.sh  ci-matrix.json  repackage.sh  smoke-torch.sh  smoke.sh  stage.sh
engines/libtorch/test/: CMakeLists.txt  smoke.cpp
engines/litert/: CMakeLists.txt  CMakePresets.json  README.md  android-build.sh  build-ios-bazel.sh  ci-matrix.deferred.json  ci-matrix.json  ios.sh  presets-base.json  smoke.sh  stage.sh
engines/litert/test/: CMakeLists.txt  smoke.cpp
engines/onnxruntime/: README.md  build-ort.sh  ci-matrix.json  ios.sh  repackage-shared.sh  smoke-onnx.sh  smoke.sh  stage.sh
engines/onnxruntime/test/: CMakeLists.txt  add.onnx  smoke.cpp
engines/tflite/: CMakeLists.txt  README.md  ios.sh  presets-base.json
engines/tflite/test/: CMakeLists.txt  smoke.cpp
litert/: CMakeLists.txt  CMakePresets.json  README.md
shared/: bundle-static.sh  make-xcframework.sh  package.sh  sign-macos.sh  smoke-test.sh
